--- a/about.html
+++ b/about.html
@@ -125,60 +125,64 @@
             <li class="active">Женские стрижки</li>
         </ul>
         <div class="title-page">
-            <h1>БЛОГ</h1>
+            <h1>О НАС</h1>
         </div>
-        <div class="news-block">
-            <div class="news-block-img">
-                <img src="images/good3.jpg">
-            </div>
-            <div class="news-block-body">
-                <h3><a href="#">ПИГМЕНТЫ ДЛЯ ТАТУАЖА</a></h3>
-                <p>Нанесение пигмента – это искусство, но этому искусству можно научиться.</p>
-                <div class="read-later-block">
-                    <a href="#" class="read-later">Читать полностью</a>
-                </div>
-            </div>
-        </div>
-        <div class="news-block">
-            <div class="news-block-img">
-                <img src="images/good8.jpg">
-            </div>
-            <div class="news-block-body">
-                <h3><a href="#">ПРОТИВОПОКАЗАНИЯ К ПЕРМАНЕНТНОМУ МАКИЯЖУ</a></h3>
-                <p>Нанесение пигмента – это искусство, но этому искусству можно научиться.</p>
-                <div class="read-later-block">
-                    <a href="#" class="read-later">Читать полностью</a>
-                </div>
-            </div>
-        </div>
-        <div class="news-block">
-            <div class="news-block-img">
-                <img src="images/good7.jpg">
-            </div>
-            <div class="news-block-body">
-                <h3><a href="#">ТЕХНИКИ ТАТУАЖА И ИХ ОТЛИЧИЯ</a></h3>
-                <p>Нанесение пигмента – это искусство, но этому искусству можно научиться.</p>
-                <div class="read-later-block">
-                    <a href="#" class="read-later">Читать полностью</a>
-                </div>
+        <div class="background-image-block">
+            <div class="overlay-block"></div>
+            <div class="container">
+                <h3><span class="underline--magical">У ЛИЦА ТАК МНОГО ГРАНЕЙ</span></h3>
+                <p><span class="underline--magical"><b>Салон красоты Лица</b></span> находится в самом центре города в
+                    двух
+                    шагах от Сенной площади по адресу Спасский пер. 3. Это настоящая фабрика красоты, трудно найти
+                    услугу,
+                    которой здесь не оказывают: для клиентов имеется парикмахерский зал, студия ногтевого сервиса,
+                    богатейшие косметические программы, татуаж, солярий, СПА, отбеливание зубов и многое другое.</p>
+                <p>В <span class="underline--magical"><b>парикмахерском зале</b></span> выполняют стрижки, укладки,
+                    делают
+                    прически и окрашивание в полном соответствии с модными и современными тенденциями, проводят
+                    выпрямление
+                    и лечение волос, создают великолепные завивки.</p>
+                <p><span class="underline--magical"><b>Ногтевой сервис</b></span> предлагает маникюр и педикюр в
+                    классическом, европейском, аппаратном исполнении, наращивание и укрепление ногтей, спа-процедуры для
+                    рук
+                    и ног, декоративные покрытия с применением средств OPI, CND, Shellac.</p>
+                <p><span class="underline--magical"><b>Косметический кабинет</b></span> предоставляет огромное
+                    количество
+                    услуг по уходу за лицом и телом. Здесь есть процедуры аппаратной косметологии, обертывания, пилинги
+                    и
+                    уходы, инъекционная мезотерапия, биоэпиляция, несколько видов массажа. Здесь же оказывают услуги по
+                    визажу, оформляют брови и ресницы, делают татуаж, пирсинг, есть процедура косметического отбеливания
+                    зубов.</p>
+                <p><span class="underline--magical"><b>Солярий</b></span> поможет создать летнее настроение, придать
+                    коже
+                    красивый отдохнувший загорелый вид даже среди глубокой зимы, или промозглой осенью.</p>
             </div>
         </div>
-        <div class="news-block">
-            <div class="news-block-img">
-                <img src="images/good1.jpg">
+        <div class="actions-social">
+            <h2>Узнайте об акциях первыми!</h2>
+            <p>Подпишитесь на наши социальные сети и вы не только будете узнавать о всех специальных предложениях
+                первыми,
+                но и сможете узнать о новинках в области индустрии красоты.</p>
+            <div class="footer-address-item social-block">
+                <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" title="Мы в Instagram">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+                <a href="https://vk.com/litsa_spb" target="_blank" title="Мы ВКонтакте">
+                    <i class="fa fa-vk" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.facebook.com/Litsaspb/" target="_blank" title="Мы в Facebook">
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                </a>
+                <a href="https://twitter.com/SalonLitsa" target="_blank" title="Мы в Twitter">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+                <a href="#" target="_blank" title="Мы в WhatsApp">
+                    <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                </a>
+                <a href="#" target="_blank" title="Мы в Telegram">
+                    <i class="fa fa-telegram" aria-hidden="true"></i>
+                </a>
             </div>
-            <div class="news-block-body">
-                <h3><a href="#">ГДЕ УДАЛИТЬ ПЕРМАНЕНТНЫЙ МАКИЯЖ (ТАТУАЖ)?</a></h3>
-                <p>Нанесение пигмента – это искусство, но этому искусству можно научиться.</p>
-                <div class="read-later-block">
-                    <a href="#" class="read-later">Читать полностью</a>
-                </div>
-            </div>
-        </div>
-        <div class="pagination">
-            <span class="ditto_currentpage">1</span>
-            <a class="ditto_page" href="#">2</a>
-            <a class="ditto_page" href="#">3</a>
         </div>
     </div>
     <div class="sign-up-block">
