--- a/blog-page.html
+++ b/blog-page.html
@@ -239,16 +239,36 @@
             </div>
         </div>
     </div>
-    <div class="grey-line-page">
+    <div class="sign-up-block">
         <div class="container">
-            <div class="flex-sale-cart-block">
-                <div class="shares-cart-block-text">
-                    <h3>Получите постоянную скидку</h3>
-                    <div class="big-pencent-shares">5%</div>
-                    <a href="#" class="fancy-btn" data-toggle="modal" data-target="#modal-call">ПОЛУЧИТЬ КАРТУ</a>
+            <div class="sign-up-title">ЗАПИСАТЬСЯ ОНЛАЙН</div>
+            <div class="sign-up-flex">
+                <div class="sign-up-flex-item">
+                    <div class="sign-up-flex-item-title">
+                        Ваше имя:
+                    </div>
+                    <div class="sign-up-flex-item-input">
+                        <input type="text">
+                    </div>
                 </div>
-                <div class="shares-image-block">
-                    <img src="images/shares.png" alt="">
+                <div class="sign-up-flex-item">
+                    <div class="sign-up-flex-item-title">
+                        Ваш телефон:
+                    </div>
+                    <div class="sign-up-flex-item-input">
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="sign-up-flex-item">
+                    <div class="sign-up-flex-item-title">
+                        Ваш email:
+                    </div>
+                    <div class="sign-up-flex-item-input">
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="sign-up-flex-item">
+                    <button type="button" class="fancy-btn">Записаться</button>
                 </div>
             </div>
         </div>
