--- a/index.html
+++ b/index.html
@@ -1,119 +1,155 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Проект сайта Лица</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
+
 <body>
-<div class="pages">
-    <div class="pages__project">Проект сайта Лица</div>
-    <div class="pages__title">Готовность по проекту</div>
-    <ul class="pages__list">
-        <li class="pages__item pages__item_orange">
-            <a href="litsa-spb.html" target="_blank">
-                <span class="pages__name">Главная страница</span>
-                <span class="pages__href">litsa-spb.html</span>
-            </a>
-        </li>
-        <li class="pages__item pages__item_orange">
-            <a href="services.html" target="_blank">
-                <span class="pages__name">Услуги</span>
-                <span class="pages__href">services.html</span>
-            </a>
-        </li>
-        <li class="pages__item pages__item_orange">
-            <a href="service.html" target="_blank">
-                <span class="pages__name">Услуга</span>
-                <span class="pages__href">service.html</span>
-            </a>
-        </li>
-        <li class="pages__item pages__item_orange">
-            <a href="prices.html" target="_blank">
-                <span class="pages__name">Цены</span>
-                <span class="pages__href">prices.html</span>
-            </a>
-        </li>
-        <li class="pages__item pages__item_orange">
-            <a href="blog.html" target="_blank">
-                <span class="pages__name">Блог</span>
-                <span class="pages__href">blog.html</span>
-            </a>
-        </li>
-        <li class="pages__item pages__item_orange">
-            <a href="blog-page.html" target="_blank">
-                <span class="pages__name">Блог страница</span>
-                <span class="pages__href">blog-page.html</span>
-            </a>
-        </li>
-        <li class="pages__item pages__item_orange">
-            <a href="shares.html" target="_blank">
-                <span class="pages__name">Акции</span>
-                <span class="pages__href">shares.html</span>
-            </a>
-        </li>
-        <li class="pages__item pages__item_red">
-            <a href="online.html" target="_blank">
-                <span class="pages__name">Онлайн-запись (Это сторонний модуль, менять в нём ничего не будем)</span>
-                <span class="pages__href">online.html</span>
-            </a>
-        </li>
-    </ul>
-</div>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: sans-serif; }
+    <div class="pages">
+        <div class="pages__project">Проект сайта Лица</div>
+        <div class="pages__title">Готовность по проекту</div>
+        <ul class="pages__list">
+            <li class="pages__item pages__item_orange">
+                <a href="litsa-spb.html" target="_blank">
+                    <span class="pages__name">Главная страница</span>
+                    <span class="pages__href">litsa-spb.html</span>
+                </a>
+            </li>
 
-    .pages {
-        display: flex;
-        flex-direction: column; }
-    .pages__project {
-        background-color: black;
-        color: white;
-        padding: 10px;
-        text-align: center;
-        font-size: 22px; }
-    .pages__title {
-        text-align: center;
-        font-size: 18px;
-        padding: 15px; }
-    .pages__list {
-        max-width: 700px;
-        width: 100%;
-        margin: 0 auto;
-        list-style-type: none; }
-    .pages__item {
-        background-color: #f0f0f0;
-        margin: 5px;
-        padding: 5px;
-        transition: background-color .1s ease-in-out; }
-    .pages__item a {
-        color: #ffffff;
-        text-decoration: none;
-        display: flex;
-        justify-content: space-between; }
-    .pages__item_green {
-        background-color: #85bb3d; }
-    .pages__item_green:hover {
-        background-color: #7fb43c; }
-    .pages__item_orange {
-        background-color: #ffa810; }
-    .pages__item_orange:hover {
-        background-color: #e99810; }
-    .pages__item_red {
-        background-color: #ff6653; }
-    .pages__item_red:hover {
-        background-color: #e8624f; }
+            <li class="pages__item pages__item_orange">
+                <a href="about.html" target="_blank">
+                    <span class="pages__name">О нас</span>
+                    <span class="pages__href">about.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="services.html" target="_blank">
+                    <span class="pages__name">Услуги</span>
+                    <span class="pages__href">services.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="service.html" target="_blank">
+                    <span class="pages__name">Услуга</span>
+                    <span class="pages__href">service.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="prices.html" target="_blank">
+                    <span class="pages__name">Цены</span>
+                    <span class="pages__href">prices.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="blog.html" target="_blank">
+                    <span class="pages__name">Блог</span>
+                    <span class="pages__href">blog.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="blog-page.html" target="_blank">
+                    <span class="pages__name">Блог страница</span>
+                    <span class="pages__href">blog-page.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_orange">
+                <a href="shares.html" target="_blank">
+                    <span class="pages__name">Акции</span>
+                    <span class="pages__href">shares.html</span>
+                </a>
+            </li>
+            <li class="pages__item pages__item_red">
+                <a href="online.html" target="_blank">
+                    <span class="pages__name">Онлайн-запись (Это сторонний модуль, менять в нём ничего не будем)</span>
+                    <span class="pages__href">online.html</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
 
-    @media (max-width: 700px) {
-        .pages .pages__list .pages__item .pages__href {
-            display: none; } }
-</style>
-<script>
-    $('a[href="#"]').attr('target','_self');
-</script>
+        .pages {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .pages__project {
+            background-color: black;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            font-size: 22px;
+        }
+
+        .pages__title {
+            text-align: center;
+            font-size: 18px;
+            padding: 15px;
+        }
+
+        .pages__list {
+            max-width: 700px;
+            width: 100%;
+            margin: 0 auto;
+            list-style-type: none;
+        }
+
+        .pages__item {
+            background-color: #f0f0f0;
+            margin: 5px;
+            padding: 5px;
+            transition: background-color .1s ease-in-out;
+        }
+
+        .pages__item a {
+            color: #ffffff;
+            text-decoration: none;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .pages__item_green {
+            background-color: #85bb3d;
+        }
+
+        .pages__item_green:hover {
+            background-color: #7fb43c;
+        }
+
+        .pages__item_orange {
+            background-color: #ffa810;
+        }
+
+        .pages__item_orange:hover {
+            background-color: #e99810;
+        }
+
+        .pages__item_red {
+            background-color: #ff6653;
+        }
+
+        .pages__item_red:hover {
+            background-color: #e8624f;
+        }
+
+        @media (max-width: 700px) {
+            .pages .pages__list .pages__item .pages__href {
+                display: none;
+            }
+        }
+    </style>
+    <script>
+        $('a[href="#"]').attr('target', '_self');
+    </script>
 </body>
+
 </html>
