--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -30,7 +30,7 @@
                 <div class="logo-block-header">
                     <a href="/"><img src="images/logo-footer.png" alt=""></a>
                 </div>
-                <div class="header-address-block">
+                <!--<div class="header-address-block">
                     <div class="header-address">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                         <a href="#">САНКТ-ПЕТЕРБУРГ, СПАССКИЙ ПЕРЕУЛОК ДОМ 3</a>
@@ -43,7 +43,7 @@
                             С 10:00 ДО 21:00
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="header-feedback">
                     <div class="header-feedback-phone">
                         <a href="tel:88125702831"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 570-28-31</a>
@@ -51,14 +51,14 @@
                     <div class="header-feedback-phone">
                         <a href="tel:88124082840"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 408-28-40</a>
                     </div>
-                    <div class="header-feedback-mail">
+                    <!--<div class="header-feedback-mail">
                         <a href="mailto:salon.litsa@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>
                             salon.litsa@gmail.com</a>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="header-order">
                     <a href="#" class="fancy-btn">ОНЛАЙН ЗАПИСЬ</a>
-                    <button type="button" data-toggle="modal" data-target="#modal-call">ПЕРЕЗВОНИТЬ?</button>
+                    <!--<button type="button" data-toggle="modal" data-target="#modal-call">ПЕРЕЗВОНИТЬ?</button>-->
                 </div>
             </div>
         </div>
