--- a/about.html
+++ b/about.html
@@ -158,6 +158,53 @@
                     красивый отдохнувший загорелый вид даже среди глубокой зимы, или промозглой осенью.</p>
             </div>
         </div>
+        <div class="about-carousel">
+            <div class="about-carousel-item">
+                <img src="images/about1.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about2.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about3.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about4.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about5.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about6.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about7.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about8.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about9.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about10.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about11.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about12.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about13.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about14.jpg" alt="">
+            </div>
+            <div class="about-carousel-item">
+                <img src="images/about15.jpg" alt="">
+            </div>
+        </div>
         <div class="actions-social">
             <h2>Узнайте об акциях первыми!</h2>
             <p>Подпишитесь на наши социальные сети и вы не только будете узнавать о всех специальных предложениях
