--- a/blog-page.html
+++ b/blog-page.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <header class="header-line-block header-no-main-page">
+    <header class="header-line-block">
         <div class="container">
             <div class="header-main-page">
                 <div class="logo-block-header">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="header-feedback">
-                    <div class="header-feedback-phone">
+                    <!--<div class="header-feedback-phone">
                         <a href="tel:88125702831"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 570-28-31</a>
                     </div>
                     <div class="header-feedback-phone">
@@ -54,69 +54,32 @@
                     <div class="header-feedback-mail">
                         <a href="mailto:salon.litsa@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>
                             salon.litsa@gmail.com</a>
+                    </div>-->
+                    <div class="social-block">
+                        <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" title="Мы в Instagram">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://vk.com/litsa_spb" target="_blank" title="Мы ВКонтакте">
+                            <i class="fa fa-vk" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.facebook.com/Litsaspb/" target="_blank" title="Мы в Facebook">
+                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://twitter.com/SalonLitsa" target="_blank" title="Мы в Twitter">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" target="_blank" title="Мы в WhatsApp">
+                            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="header-order">
                     <a href="#" class="fancy-btn">ОНЛАЙН ЗАПИСЬ</a>
-                    <button type="button" data-toggle="modal" data-target="#modal-call">ПЕРЕЗВОНИТЬ?</button>
+                    <!--<button type="button" data-toggle="modal" data-target="#modal-call">ПЕРЕЗВОНИТЬ?</button>-->
                 </div>
             </div>
         </div>
-        <div class="black-line-menu">
-            <div class="container">
-                <nav class="navbar navbar-default">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                            data-target="#navbar-main" aria-expanded="false">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="collapse navbar-collapse" id="navbar-main">
-                        <ul class="nav navbar-nav">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">О НАС</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Фотогалерея</a></li>
-                                    <li><a href="#">Конаткты</a></li>
-                                    <li><a href="#">Наши мастера</a></li>
-                                    <li><a href="#">Бренды</a></li>
-                                    <li><a href="#">Вакансии</a></li>
-                                    <li><a href="#">Письмо руководителю</a></li>
-                                    <li><a href="#">Новости салона</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    УСЛУГИ
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Мужские стрижки</a></li>
-                                    <li><a href="#">Женские стрижки</a></li>
-                                    <li><a href="#">Окрашивание волос</a></li>
-                                    <li><a href="#">Детские услуги</a></li>
-                                    <li><a href="#">Маникюр</a></li>
-                                    <li><a href="#">Педикюр</a></li>
-                                    <li><a href="#">Эстетическая Косметология</a></li>
-                                    <li><a href="#">Инъекционная косметология</a></li>
-                                    <li><a href="#">Депиляция</a></li>
-                                    <li><a href="#">Макияж</a></li>
-                                    <li><a href="#">Татуаж - Перманентный макияж</a></li>
-                                    <li><a href="#">Наращивание ресниц</a></li>
-                                    <li><a href="#">Массаж</a></li>
-                                    <li><a href="#">Пирсинг</a></li>
-                                    <li><a href="#">Солярий</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">ЦЕНЫ</a></li>
-                            <li><a href="#">АКЦИИ</a></li>
-                            <li><a href="#">ОТЗЫВЫ</a></li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
+
     </header>
     <div class="black-line-menu">
         <div class="container">
