--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -30,7 +30,7 @@
                 <div class="logo-block-header">
                     <a href="/"><img src="images/logo-footer.png" alt=""></a>
                 </div>
-                <!--<div class="header-address-block">
+                <div class="header-address-block">
                     <div class="header-address">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                         <a href="#">САНКТ-ПЕТЕРБУРГ, СПАССКИЙ ПЕРЕУЛОК ДОМ 3</a>
@@ -43,18 +43,35 @@
                             С 10:00 ДО 21:00
                         </div>
                     </div>
-                </div>-->
+                </div>
                 <div class="header-feedback">
-                    <div class="header-feedback-phone">
+                    <!--<div class="header-feedback-phone">
                         <a href="tel:88125702831"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 570-28-31</a>
                     </div>
                     <div class="header-feedback-phone">
                         <a href="tel:88124082840"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 408-28-40</a>
                     </div>
-                    <!--<div class="header-feedback-mail">
+                    <div class="header-feedback-mail">
                         <a href="mailto:salon.litsa@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>
                             salon.litsa@gmail.com</a>
                     </div>-->
+                    <div class="social-block">
+                        <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" title="Мы в Instagram">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://vk.com/litsa_spb" target="_blank" title="Мы ВКонтакте">
+                            <i class="fa fa-vk" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.facebook.com/Litsaspb/" target="_blank" title="Мы в Facebook">
+                            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://twitter.com/SalonLitsa" target="_blank" title="Мы в Twitter">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#" target="_blank" title="Мы в WhatsApp">
+                            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="header-order">
                     <a href="#" class="fancy-btn">ОНЛАЙН ЗАПИСЬ</a>
@@ -72,9 +89,6 @@
         </video>
         <div class="title-page main-page-title">
             <h1>ЛИЦА | САЛОН КРАСОТЫ</h1>
-        </div>
-        <div class="button-center">
-            <a href="#" class="fancy-btn">О НАС</a>
         </div>
         <div class="main-arrow-down">
             <a href="#main"><i class="fa fa-long-arrow-down" aria-hidden="true"></i></a>
@@ -418,9 +432,6 @@
             </a>
             <a href="#" target="_blank" title="Мы в WhatsApp">
                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
-            </a>
-            <a href="#" target="_blank" title="Мы в Telegram">
-                <i class="fa fa-telegram" aria-hidden="true"></i>
             </a>
         </div>
     </div>
