--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -14,6 +14,8 @@
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/owl.theme.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/style-grid.css" rel="stylesheet">
+    <link href="css/demo.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -84,7 +86,7 @@
 
     <div class="element-with-video-bg">
         <div class="overlay-video"></div>
-        <video loop="" muted="" autoplay="" poster="video/plane.jpg" class="fullscreen-bg__video">
+        <video loop="" muted="" autoplay="" class="fullscreen-bg__video">
             <source src="video/videoplayback.mp4" type="video/mp4">
         </video>
         <div class="title-page main-page-title">
@@ -282,6 +284,27 @@
             <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" class="fancy-btn"><i
                     class="fa fa-instagram" aria-hidden="true"></i> БОЛЬШЕ ФОТО</a>
         </div>
+    </div>
+    <div class="title-page">
+        <h2>ГАЛЕРЕЯ РАБОТ</h2>
+    </div>
+    <div id="ri-grid" class="ri-grid ri-grid-size-2">
+        <img class="ri-loading-image" src="images/loading.gif" />
+        <ul>
+            <li><a href="#"><img src="images/portfolio1.jpg" /></a></li>
+            <li><a href="#"><img src="images/portfolio2.jpg" /></a></li>
+            <li><a href="#"><img src="images/portfolio3.jpg" /></a></li>
+            <li><a href="#"><img src="images/portfolio4.jpg" /></a></li>
+            <li><a href="#"><img src="images/portfolio5.jpg" /></a></li>
+            <li><a href="#"><img src="images/portfolio6.jpg" /></a></li>
+            <li><a href="#"><img src="images/portfolio7.jpg" /></a></li>
+            <li><a href="#"><img src="images/portfolio8.jpg" /></a></li>
+            <li><a href="#"><img src="images/portfolio9.jpg" /></a></li>
+            <li><a href="#"><img src="images/shares1.jpg" /></a></li>
+            <li><a href="#"><img src="images/shares2.jpg" /></a></li>
+            <li><a href="#"><img src="images/shares3.jpg" /></a></li>
+            <li><a href="#"><img src="images/good8.jpg" /></a></li>
+        </ul>
     </div>
     <div class="main-map-block">
         <script type="text/javascript" charset="utf-8" async
@@ -574,6 +597,8 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.js"></script>
     <script src="js/owl.carousel.js"></script>
+    <script src="js/modernizr.custom.26633.js"></script>
+    <script src="js/jquery.gridrotator.js"></script>
     <script src="js/main.js"></script>
 </body>
 
